--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,9 @@
               <ul class="navbar-nav me-auto mt-2">
                 <li> <a class="nav-item nav-link mb-3 active align-center" href="/">Home</a> </li>
               </ul>
+              <ul class="navbar-nav me-auto mt-2">
+                <li> <a class="nav-item nav-link mb-3 active align-center" href="/admin/logout">Log Out</a> </li>
+              </ul>
             {% else %}
               <ul class="navbar-nav ms-auto mt-2 ml-auto"></ul>
                 <li class="ml-auto"> <a class="nav-item nav-link" href="/games">Upcoming Games</a> </li>
