--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            {% if session["user_id"] %}
+            {% if session["logged_in"] %}
               <ul class="navbar-nav me-auto mt-2">
                 <li> <a class="nav-item nav-link mb-3 active align-center" href="/">Home</a> </li>
               </ul>
